--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^7.6.0",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "lowdb": "^6.0.1"
   },
